<resources>
    <string name="app_name">EMI_Calc</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">EMI Calculator</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="btn_Calculate">Calculate EMI</string>
    <string name="label_Amount">Mortgage Principal Amount</string>
    <string name="label_Months">Number of Payments</string>
    <string name="label_Interest">Annual Interest Rate</string>
    <string name="hint_Amount">Enter amount in dollars ($)</string>
    <string name="hint_Months">Enter number of months</string>
    <string name="hint_Interest">Enter interest rate as %</string>
    <string name="label_Welcome">Welcome to my EMI Calculator!</string>
    <string name="btn_Share">Share Your EMI Result</string>
    <string name="label_Result">Calculated EMI:</string>
    <string name="label_Actions">Actions:</string>
    <string name="btn_Back">Go Back</string>
    <string name="btn_Reset">Reset</string>
    <string name="btn_Search">Find a Mortgage Broker</string>
    <string name="label_Help">Need Help?</string>
    <string name="btn_Copy">Copy to Clipboard</string>
    <string name="label_Error">ERROR!</string>
</resources>