<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B2EBF2"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_Welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="160dp"
            android:layout_marginBottom="32dp"
            android:text="@string/label_Welcome"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/card_Result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_Result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.562"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_Welcome">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/label_Result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/label_Amount"
                    android:textSize="16sp"
                    tools:layout_editor_absoluteX="50dp"
                    tools:layout_editor_absoluteY="59dp" />

                <EditText
                    android:id="@+id/text_Result"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_below="@+id/label_Result"
                    android:hint="@string/hint_Amount"
                    android:inputType="numberDecimal"
                    tools:layout_editor_absoluteX="50dp"
                    tools:layout_editor_absoluteY="81dp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_Months"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_Result"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_Result">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/label_Months"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/label_Months"
                    android:textSize="16sp"
                    tools:layout_editor_absoluteX="50dp"
                    tools:layout_editor_absoluteY="415dp" />

                <EditText
                    android:id="@+id/input_Months"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_below="@+id/label_Months"
                    android:hint="@string/hint_Months"
                    android:inputType="number"
                    tools:layout_editor_absoluteX="50dp"
                    tools:layout_editor_absoluteY="445dp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_Interest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_Months">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/label_Interest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/label_Interest"
                    android:textSize="16sp"
                    tools:layout_editor_absoluteX="39dp"
                    tools:layout_editor_absoluteY="353dp" />

                <EditText
                    android:id="@+id/input_Interest"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_below="@+id/label_Interest"
                    android:hint="@string/hint_Interest"
                    android:inputType="numberDecimal"
                    tools:layout_editor_absoluteX="39dp"
                    tools:layout_editor_absoluteY="383dp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_Calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_Calculate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_Interest"
            app:layout_constraintVertical_bias="0.069" />

        <Button
            android:id="@+id/btn_Reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_Reset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_Calculate"
            app:layout_constraintVertical_bias="0.062" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_Help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_help"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_Reset" />

        <TextView
            android:id="@+id/label_Help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/label_Help"
            app:layout_constraintBottom_toTopOf="@+id/btn_Help"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>